CMSGATE-53: release version

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,10 @@
   ],
   "require": {
     "php": ">= 5.6.0",
-    "esas/cmsgate-epos-lib": "~v1.17.5",
-    "esas/cmsgate-buynow-lib": "~v1.18.2",
-    "esas/cmsgate-core": "~v1.17.15",
+    "esas/cmsgate-epos-lib": "~v1.18.0",
+    "esas/cmsgate-buynow-lib": "~v1.18.3",
+    "esas/cmsgate-core": "~v1.18.1",
+    "phpdocumentor/reflection-docblock": "5.3.0",
     "ext-pdo": "*",
     "ext-json": "*"
   },
